--- a/docs/css/grids_menu.css
+++ b/docs/css/grids_menu.css
@@ -2,7 +2,7 @@
     list-style-type: none;
     display: grid;
     grid-template-columns: auto auto auto auto;
-    justify-content: space-around;
+    justify-content: ;
 }
 
 .nav-item {
